Maj page compte, feature rating étoiles

--- a/frontend/src/app/features/films/components/film-booking/film-booking.component.html
+++ b/frontend/src/app/features/films/components/film-booking/film-booking.component.html
@@ -14,11 +14,11 @@
           />
           <div class="card-body">
             <p class="card-text">
-              {{ this.session[0].formatedDate }}
+              {{ this.session[0].date }}
             </p>
             <p class="card-text">
-              {{ this.session[0].formatedStartHour }} -
-              {{ this.session[0].formatedEndHour }}
+              {{ this.session[0].startHour }} -
+              {{ this.session[0].endHour }}
             </p>
             <p class="card-text">
               {{ this.session[0].cinemaName }}
