--- a/frontend/src/app/features/orders/components/card-orders/card-orders.component.css
+++ b/frontend/src/app/features/orders/components/card-orders/card-orders.component.css
@@ -33,10 +33,31 @@
   text-align: justify;
 }
 
+.order-details {
+  margin-left: 15px;
+  color: #d4cdc9;
+}
+
+.rating {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.rating img {
+  width: 40px;
+  height: 40px;
+}
+
 #actors {
   font-size: small;
 }
 
 #title {
   text-align: center;
+}
+
+#stars-outer img {
+  cursor: pointer;
 }
