--- a/frontend/src/app/features/orders/components/card-orders/card-orders.component.css
+++ b/frontend/src/app/features/orders/components/card-orders/card-orders.component.css
@@ -42,6 +42,7 @@ p {
   flex-direction: column;
   margin-left: 15px;
   color: #d4cdc9;
+  max-width: 20rem;
 }
 
 .rating {
@@ -78,4 +79,18 @@ p {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+#rating-stars {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  margin-bottom: 5px;
+}
+
+#rating-stars img {
+  width: 40px;
+  height: 40px;
 }
