--- a/frontend/src/app/features/orders/components/list-orders/list-orders.component.html
+++ b/frontend/src/app/features/orders/components/list-orders/list-orders.component.html
@@ -1,1 +1,4 @@
-<app-card-orders [items]="listOrders"></app-card-orders>
+<app-card-orders
+  [items]="listOrders"
+  (opinionSubmitted)="getOrders()"
+></app-card-orders>
