--- a/frontend/src/app/features/orders/components/card-orders/card-orders.component.html
+++ b/frontend/src/app/features/orders/components/card-orders/card-orders.component.html
@@ -104,13 +104,17 @@
       </div>
 
       <!-- Avis écrit -->
-      <div *ngIf="order.opinionSent">
-        <div *ngFor="let _ of [].constructor(order.note)" id="rating-stars">
-          <img src="assets/filledStar.png" alt="star" />
+      <div *ngIf="order.opinionSent" id="sent-opinion">
+        <div id="rating-stars">
+          <ng-container *ngFor="let _ of [].constructor(order.note)">
+            <img src="assets/filledStar.png" alt="star" />
+          </ng-container>
         </div>
 
-        <h6 class="mt-3">Avis partagé :</h6>
-        <p>{{ order.opinionDescription }}</p>
+        <div>
+          <h6 class="mt-3 text-decoration-underline">Avis partagé :</h6>
+          <p>{{ order.opinionDescription }}</p>
+        </div>
       </div>
     </div>
   </div>
