--- a/frontend/src/app/features/menus/nav/nav.component.html
+++ b/frontend/src/app/features/menus/nav/nav.component.html
@@ -20,6 +20,9 @@
           >Accueil
         </a>
       </li>
+      <li class="nav-item" id="admin" *ngIf="isAdmin">
+        <a class="nav-link" routerLink="admin">Administration</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="compte" routerLinkActive="actif"
           >Compte</a
