Maj administration ajout et modifier film

--- a/frontend/src/app/features/administration/add-film/add-film.component.html
+++ b/frontend/src/app/features/administration/add-film/add-film.component.html
@@ -3,6 +3,7 @@
     <button
       class="btn"
       type="button"
+      (click)="toggleMenu()"
       data-bs-toggle="collapse"
       data-bs-target="#addFilm"
       aria-expanded="false"
@@ -12,11 +13,16 @@
       Ajouter un film
     </button>
   </p>
-  <div class="collapse" id="addFilm">
+  <div
+    class="collapse"
+    id="addFilm"
+    [class.show]="isOpen"
+    (hidden.bs.collapse)="resetForm()"
+  >
     <!-- Formulaire pour ajouter un film -->
     <div class="card card-body">
       <div class="accordion-body">
-        <app-add-film-form></app-add-film-form>
+        <app-add-film-form *ngIf="showForm"></app-add-film-form>
       </div>
     </div>
   </div>
