--- a/frontend/src/app/features/administration/update-film/update-film.component.html
+++ b/frontend/src/app/features/administration/update-film/update-film.component.html
@@ -13,16 +13,14 @@
       Modifier un film
     </button>
   </p>
-  <div
-    class="collapse"
-    id="updateFilm"
-    [class.show]="isOpen"
-    (hidden.bs.collapse)="resetForm()"
-  >
+  <div class="collapse" id="updateFilm" [class.show]="isOpen">
     <!-- Formulaire pour modifier un film -->
     <div class="card card-body">
       <div class="accordion-body">
-        <app-update-film-form *ngIf="showForm"></app-update-film-form>
+        <app-update-film-form
+          [listTypes]="listTypes"
+          [listFilms]="listFilms"
+        ></app-update-film-form>
       </div>
     </div>
   </div>
