--- a/frontend/src/app/pages/administration/administration.component.html
+++ b/frontend/src/app/pages/administration/administration.component.html
@@ -1,8 +1,15 @@
-<h1>Espace administration</h1>
+<div class="container">
+  <h1>Espace administration</h1>
 
-<app-add-film [listTypes]="listTypes" [listFilms]="listFilms"></app-add-film>
+  <app-add-film [listTypes]="listTypes" [listFilms]="listFilms"></app-add-film>
 
-<app-update-film
-  [listTypes]="listTypes"
-  [listFilms]="listFilms"
-></app-update-film>
+  <app-update-film
+    [listTypes]="listTypes"
+    [listFilms]="listFilms"
+  ></app-update-film>
+
+  <app-add-session
+    [listFilms]="listFilms"
+    [listCinemas]="listCinemas"
+  ></app-add-session>
+</div>
