Maj affichage "donner un avis" si séance passée

--- a/frontend/src/app/features/orders/components/card-orders/card-orders.component.html
+++ b/frontend/src/app/features/orders/components/card-orders/card-orders.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let order of items()">
+<div *ngFor="let order of listOrders">
   <div class="container">
     <div class="card mb-3" style="width: 828px" id="film-card">
       <div class="row g-0">
