Navigation carousel vers film correspondant

--- a/frontend/src/app/features/films/components/card-films/card-films.component.html
+++ b/frontend/src/app/features/films/components/card-films/card-films.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let film of items()">
+<div *ngFor="let film of items()" [id]="film.title">
   <div class="container">
     <div class="card mb-3" style="width: 828px">
       <div class="row g-0">
