Correction note envoyée

--- a/frontend/src/app/features/orders/components/card-orders/card-orders.component.html
+++ b/frontend/src/app/features/orders/components/card-orders/card-orders.component.html
@@ -1,6 +1,6 @@
 <div *ngFor="let order of listOrders">
-  <div class="container">
-    <div class="card mb-3" style="width: 828px" id="film-card">
+  <div class="container align-items-center">
+    <div class="card mb-3" style="width: 70%; height: 100%" id="film-card">
       <div class="row g-0">
         <div class="col-md-6">
           <img
@@ -31,52 +31,9 @@
         Total payé : {{ order.price }} &euro;
       </p>
       <div class="rating" *ngIf="order.viewed && !order.opinionSent">
-        <div>
-          <p class="m-0">Laisser un avis :</p>
-        </div>
-        <!-- Etoiles représentant la note du film -->
-        <div id="stars-outer">
-          <img
-            src="assets/emptyStar.png"
-            alt="empty star"
-            id="star1"
-            (mouseenter)="fillStars($event)"
-            (mouseleave)="resetStars($event)"
-            (click)="setRating($event, 1)"
-          />
-          <img
-            src="assets/emptyStar.png"
-            alt="empty star"
-            id="star2"
-            (mouseenter)="fillStars($event)"
-            (mouseleave)="resetStars($event)"
-            (click)="setRating($event, 2)"
-          />
-          <img
-            src="assets/emptyStar.png"
-            alt="empty star"
-            id="star3"
-            (mouseenter)="fillStars($event)"
-            (mouseleave)="resetStars($event)"
-            (click)="setRating($event, 3)"
-          />
-          <img
-            src="assets/emptyStar.png"
-            alt="empty star"
-            id="star4"
-            (mouseenter)="fillStars($event)"
-            (mouseleave)="resetStars($event)"
-            (click)="setRating($event, 4)"
-          />
-          <img
-            src="assets/emptyStar.png"
-            alt="empty star"
-            id="star5"
-            (mouseenter)="fillStars($event)"
-            (mouseleave)="resetStars($event)"
-            (click)="setRating($event, 5)"
-          />
-        </div>
+        <app-stars-rating
+          (ratingSelected)="onRatingReceived($event)"
+        ></app-stars-rating>
       </div>
 
       <!-- Description de l'avis -->
