--- a/frontend/src/app/features/orders/components/card-orders/card-orders.component.css
+++ b/frontend/src/app/features/orders/components/card-orders/card-orders.component.css
@@ -11,6 +11,12 @@ button:hover {
 
 p {
   text-align: center;
+  margin-bottom: 2rem;
+}
+
+qrcode {
+  display: flex;
+  justify-content: center;
 }
 
 .container {
