--- a/frontend/src/app/features/films/components/card-films/card-films.component.html
+++ b/frontend/src/app/features/films/components/card-films/card-films.component.html
@@ -1,4 +1,5 @@
 <div *ngFor="let film of items" [id]="film.title">
+  @if (selectedType() === '' || film.type.includes(selectedType() ?? '')) {
   <div class="container">
     <div class="card mb-3" style="width: 828px">
       <div class="row g-0">
@@ -69,4 +70,5 @@
       </div>
     </div>
   </div>
+  }
 </div>
