--- a/frontend/src/app/features/films/components/list-films/list-films.component.html
+++ b/frontend/src/app/features/films/components/list-films/list-films.component.html
@@ -1,1 +1,4 @@
-<app-card-films [items]="listFilms"></app-card-films>
+<app-card-films
+  [items]="listFilms"
+  [selectedType]="selectedType()"
+></app-card-films>
