--- a/frontend/src/app/pages/films/films.component.css
+++ b/frontend/src/app/pages/films/films.component.css
@@ -1,3 +1,11 @@
 div {
   align-items: center;
 }
+
+#up {
+  background-color: #d4cdc9;
+  position: fixed;
+  right: 5%;
+  bottom: 5%;
+  z-index: 1000;
+}
